sumo/tests/netconvert/errors/xml_false_edg/options.netconvert
--xml-edge-files=hokkaido2.edg.xml --xml-node-files=input_nodes.nod.xml --output-file=net.net.xml
